src/modules/Header/Header.module.scss
@keyframes hoveranimation {
  0% { width: 0%; }
  100% { width: 100%; }
}

.redspan {
  color: #f01f4b;
}

.header {
  display: grid;
  place-items: center;
  margin-top: 40px;
  width: 100%;
}

.badge {
  padding: 0.2em 0.5em;
  margin-left: 10px;
  background: #f01f4c31;
  font-weight: 600;
  color: #fff;
  font-size: 75%;
  border-radius: 0.25rem;
  text-transform: uppercase;
    &.new {
      background: #d2322d;
    }
}

.active {
  border-radius: 6px;
  background-color: #656c7633;
}

.list {
  list-style: none;
  margin: 10px 0 0;
  display: flex;
  padding: 10px;
  background: #1a17175c;
  border-radius: 15px;
  li {
    margin-right: 5px;
    transition: .5s;
    &:last-of-type { 
      margin-right: 0; 
    }
    a, .disabled_element {
      color: var(--color-defaultText) !important;
      transition: .4s;
      font-weight: 440;
      display: flex;
      align-items: center;
      text-decoration: none !important;
      border-radius: 6px;
      padding-inline: 8px;
      padding-block: 6px;
        &:not(.active) {
          &:hover {
            background-color: #656c7633;
          }
        }
        span {
          display: flex;
          justify-content: center;
          align-items: center;
            svg {
              margin-right: 5px;
              width: 16px;
              height: 16px;
            }
        }
    }
    .disabled_element {
      opacity: 0.5;
      cursor: not-allowed;
      display: flex;
      justify-content: center;
      align-items: center;
        svg {
          margin-right: 5px;
          width: 16px;
          height: 16px;
        }
    }
  }
}

.mobile__header {
  display: flex;
  justify-content: center;
}

.mobile__button {
  border: none;
  background: none;
  color: white;
  font-size: 20px;
  position: absolute;
  top: 10px;
  right: 10px;
  transition: transform 0.3s ease;
}

.mobile__menu {
  z-index: 9999;
  background-color: #0f0f0f;
  position: absolute;
  top: 40px;
  right: 10px;
  padding: 15px;
  border-radius: 15px;
  ul {
    list-style: none;
    margin: 0;
    display: grid;
    gap: 7px;
    li {
      padding: 7px;
      background: lighten(#1a17175c, 5%);
      border-radius: 15px;
    }
  }
}

